--- a/change-management-app/package.json
+++ b/change-management-app/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "start": "concurrently \"npm run start --prefix backend\" \"npm run start --prefix frontend\"",
     "install-all": "npm install --prefix backend && npm install --prefix frontend",
-    "build": "npm run build --prefix frontend"
+    "build": "npm run build --prefix frontend",
+    "postbuild": "npm run build"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
-  }
-}
+  },
+  "proxy": "https://change-management-backend-df3a3c4ee29f.herokuapp.com/"}
