--- a/change-management-app/frontend/.env
+++ b/change-management-app/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=https://change-management-backend-df3a3c4ee29f.herokuapp.com/
 DANGEROUSLY_DISABLE_HOST_CHECK=true
