--- a/change-management-app/frontend/package.json
+++ b/change-management-app/frontend/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "value-equal": "^1.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
