--- a/change-management-app/frontend/package.json
+++ b/change-management-app/frontend/package.json
@@ -13,8 +13,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "value-equal": "^1.0.1",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +41,6 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
