--- a/change-management-app/frontend/package.json
+++ b/change-management-app/frontend/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm install && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,7 +39,8 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "https://change-management-backend-df3a3c4ee29f.herokuapp.com/",
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
+    "@babel/plugin-transform-private-property-in-object": "^7.21.11"
   }
 }
